# typervox

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
src/: capture.rs  client.rs  engine.rs  lib.rs  main.rs  server.rs  state.rs
typervox/: cli.py  core.py
