[package]
name = "typervox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "signal", "process"] }
axum = { version = "0.7.5", default-features = false, features = ["json", "macros", "tokio", "http1"] }
thiserror = "1.0.64"
futures-util = "0.3.31"
tokio-stream = { version = "0.1.15", features = ["net"] }
hyper-util = { version = "0.1.7", features = ["server", "tokio", "http1"] }
bytes = "1.7.1"
async-trait = "0.1.83"
hyper = { version = "1.4.1", features = ["client", "http1"] }
http-body-util = "0.1.3"
ct2rs = { version = "0.9.13", optional = true, default-features = false, features = ["hub", "whisper"] }

[dev-dependencies]
reqwest = { version = "0.12.8", default-features = false, features = ["json", "http2", "rustls-tls", "gzip", "brotli", "deflate"] }
tempfile = "3.12.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"

[features]
default = ["mock-engine"]
mock-engine = []
engine-ct2 = ["ct2rs"]
ct2rs = ["dep:ct2rs"]
